# model-versionning

./: .gitignore  Dockerfile  Makefile  docker-compose.yml  main.py  pyproject.toml  test.http  tp.ipynb
app/: Dockerfile  main.py  requirements.txt
app/mlruns/0/: meta.yaml
mlruns/0/: meta.yaml
mlruns/332846136791354317/: meta.yaml
mlruns/332846136791354317/17da6b88284a4495bc9e5797262c1762/: meta.yaml
mlruns/332846136791354317/17da6b88284a4495bc9e5797262c1762/metrics/: accuracy
mlruns/332846136791354317/17da6b88284a4495bc9e5797262c1762/tags/: mlflow.runName
mlruns/332846136791354317/47961cad9aca4848a7b02dcd106324d3/: meta.yaml
mlruns/332846136791354317/47961cad9aca4848a7b02dcd106324d3/metrics/: accuracy
mlruns/332846136791354317/47961cad9aca4848a7b02dcd106324d3/tags/: mlflow.runName
mlruns/332846136791354317/6b740f6d3990425797137f5b292795fd/: meta.yaml
mlruns/332846136791354317/6b740f6d3990425797137f5b292795fd/metrics/: accuracy
mlruns/332846136791354317/6b740f6d3990425797137f5b292795fd/tags/: mlflow.runName  mlflow.source.name
mlruns/332846136791354317/c41ec2d4937144409442f09de7e0aab2/: meta.yaml
mlruns/332846136791354317/c41ec2d4937144409442f09de7e0aab2/metrics/: accuracy
mlruns/332846136791354317/c41ec2d4937144409442f09de7e0aab2/tags/: mlflow.runName  mlflow.source.name
mlruns/332846136791354317/models/m-0dbf42c859244ed8b7f36a0a8b9afb2c/: meta.yaml
mlruns/332846136791354317/models/m-10eba838c4cd403b886e39743d0e9f95/: meta.yaml
mlruns/models/tracking-quickstart/: meta.yaml
mlruns/models/tracking-quickstart/version-1/: meta.yaml
(+24 files in other folders)
