[project]
name = "tp-mlflow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.121.0",
    "mlflow>=3.6.0",
    "scikit-learn>=1.7.2",
]

# [dependency-groups]
# dev = [
#     "ipykernel>=7.1.0",
# ]

# [dependency-groups]
# dev = [
#     "jupynium>=0.2.6",
#     "nbclassic>=1.3.3",
#     "selenium>=4.38.0",
# ]

# [dependency-groups]
# dev = [
#     "geckodriver>=0.0.1",
#     "ipykernel>=7.1.0",
#     "jupynium>=0.2.6",
#     "jupyter-console>=6.6.3",
#     "nbclassic>=1.3.3",
#     "notebook<7",
#     "pynvim>=0.6.0",
#     "selenium>=4.38.0",
# ]
